hard-gists/8a8095721ee81d49f16c/run.log
=== Docker Run Log for 8a8095721ee81d49f16c ===
Started at: Mi 29. Okt 18:07:01 CET 2025

[2025-10-29 18:07:01] START: Running container for 8a8095721ee81d49f16c
[2025-10-29 18:07:01] SUCCESS: Container 69b3bcba6d24765c1faaf2c76c689bbbc63c053408c3706a1c81653df8ceffd0 started for 8a8095721ee81d49f16c
=== Container logs for 8a8095721ee81d49f16c ===
  File "/snippet.py", line 78
    print "The needle starts at sample: %d" % (at,)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 8a8095721ee81d49f16c ===
[2025-10-29 18:07:03] INFO: Container 69b3bcba6d24765c1faaf2c76c689bbbc63c053408c3706a1c81653df8ceffd0 has stopped
